prevent auth card from leaving screen on mobile

--- a/Client/src/app/admin/email-password-auth/email-password-auth.component.css
+++ b/Client/src/app/admin/email-password-auth/email-password-auth.component.css
@@ -1,7 +1,6 @@
 mat-card {
-  min-width: 150px;
   max-width: 500px;
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
 }
 mat-form-field {
